syntax = "proto3";

option java_package = "com.xiangzi.service";
option java_outer_classname = "HelloServiceApi";

package com.xiangzi.service.api;

// HelloService is a simplified version of HelloServiceâ€™s backend API.
service HelloService {
  rpc Lookup(LookupRequest) returns (Coordinate) {}
}

// A LookupRequest is a request to look up the coordinates for a city by name.
message LookupRequest {
  string name = 1;
}

// A Coordinate identifies a location on Earth by latitude and longitude.
message Coordinate {
  // Latitude is the degrees latitude of the location, in the range [-90, 90].
  double latitude = 1;

  // Longitude is the degrees longitude of the location, in the range [-180, 180].
  double longitude = 2;
}

